fixed double scrollbar

--- a/resume/components/resume.css
+++ b/resume/components/resume.css
@@ -8,7 +8,7 @@ header {
 
 .content {
 	text-align: center;
-	overflow-x: hidden;
+	overflow: hidden;
 }
 
 ::content #contact {
